<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button1"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:onClick="returnCity"
            android:text="@string/second_city1"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun_day" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+18"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button2"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:onClick="returnCity2"
            android:text="@string/second_city2"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun_day" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+15"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button3"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:onClick="returnCity3"
            android:text="@string/second_city3"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun_day" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+12"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button4"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:onClick="returnCity4"
            android:text="@string/second_city4"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun_day" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+9"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button5"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:onClick="returnCity5"
            android:text="@string/second_city5"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun_day" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+6"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/choose_city" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />
    </LinearLayout>

</LinearLayout>